--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-@import url('./components/header.css');
+@import url('./components/desktop-header.css');
 
 @import url('./components/background.css');
 
@@ -9,7 +9,6 @@
 
 main {
     position: relative;
-    z-index: 1;
     max-width: 900px;
     margin: 12vh auto;
     padding: 24px 28px;
