fix 4 test url githubs

--- a/pages/partials/header.html
+++ b/pages/partials/header.html
@@ -2,7 +2,7 @@
 <header id="site-header">
     <div class="header-container">
         <div class="brand">
-            <a href="index.html" class="logo">
+            <a href="/index.html" class="logo">
                 <img src="/assets/img/logo_no_bg_web.webp" alt="Logo Sitio de Héroes">
             </a>
 
