All rutes working and no error on github for the header

--- a/pages/partials/header.html
+++ b/pages/partials/header.html
@@ -3,7 +3,9 @@
     <div class="header-container">
         <div class="brand">
             <a href="/index.html" class="logo">
-                <img src="/assets/img/logo_no_bg_web.webp" alt="Logo Sitio de Héroes">
+                <img src="/assets/img/logo_no_bg_web.webp" alt="Logo Héroes del Nexo" width="40" height="40"  decoding="async"
+                fetchpriority="high"
+                />
             </a>
 
             <button class="menu-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
