Footer compleately working

--- a/css/components/header-desktop.css
+++ b/css/components/header-desktop.css
@@ -1,4 +1,4 @@
- @import url('./mobile-header.css');
+ @import url('./header-mobile.css');
 
  /* =========================================================
    1) HEADER WRAPPER
