--- a/css/variables.css
+++ b/css/variables.css
@@ -62,9 +62,9 @@
     --font-family-base: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     --font-family-monospace: "Roboto Mono", ui-monospace, SFMono-Regular, Menlo, monospace;
     --font-family-titles: "Bebas Neue", system-ui, sans-serif;
+    --font-family-base: "Work Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 
     --font-size-base: 1rem;
-    /* ~16px */
     --font-size-large: 1.25rem;
     --font-size-small: 0.875rem;
     --line-height-base: 1.5;
@@ -83,7 +83,13 @@
     --space-medium: 1rem;
     --space-small: 0.5rem;
     --space-extra-small: 0.25rem;
+    /* -------------------------------------------------------
+        8) TRANSITIONS
+         ------------------------------------------------------- */
+        --transition-link: color 0.3s ease, border-color 0.3s ease;
+
 }
+
 
 /* =========================================================
    BACKGROUND UTILITIES
@@ -117,8 +123,13 @@ h2,
 h3,
 .title {
     font-family: var(--font-family-titles);
+    letter-spacing: 2.5px;
+        font-weight: 500;
 }
 
+p {
+    font-family: var(--font-family-base);
+}
 code,
 pre,
 .text-monospace {
